[gd_scene load_steps=30 format=2]

[ext_resource path="res://assets/fx/cloud01.obj" type="ArrayMesh" id=1]
[ext_resource path="res://assets/fx/cloud02.obj" type="ArrayMesh" id=2]
[ext_resource path="res://assets/fx/shock-wave.obj" type="ArrayMesh" id=3]
[ext_resource path="res://assets/fx/cloud03.obj" type="ArrayMesh" id=4]
[ext_resource path="res://FX/Explosion.gd" type="Script" id=5]
[ext_resource path="res://assets/sounds/explosion.wav" type="AudioStream" id=6]

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
vertex_color_use_as_albedo = true
albedo_color = Color( 3, 2, 2, 0.22 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.25641, 0.576923, 0.846154, 1 )
colors = PoolColorArray( 0.975586, 0, 0, 1, 1, 0.572549, 0, 1, 0.980392, 1, 0.372549, 0.517647, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
max_value = 100.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 0.107468 ), 0.0, 0.309188, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
direction = Vector3( 0.2, 0, 0.2 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 2.0
initial_velocity_random = 0.1
angular_velocity = 720.0
angular_velocity_random = 1.0
damping = 3.0
damping_curve = SubResource( 5 )
angle = 720.0
angle_random = 1.0
scale = 0.5
scale_curve = SubResource( 7 )
color_ramp = SubResource( 3 )

[sub_resource type="SpatialMaterial" id=9]
flags_transparent = true
vertex_color_use_as_albedo = true

[sub_resource type="Gradient" id=10]
offsets = PoolRealArray( 0, 0.666667, 1 )
colors = PoolColorArray( 0.705882, 0.705882, 0.705882, 0.258824, 0.152903, 0.180327, 0.224922, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
direction = Vector3( 0.2, 0, 0.2 )
spread = 180.0
gravity = Vector3( 0, 2, 0 )
initial_velocity = 3.0
initial_velocity_random = 0.1
angular_velocity = 720.0
angular_velocity_random = 1.0
damping = 3.0
damping_curve = SubResource( 5 )
angle = 720.0
angle_random = 1.0
scale = 0.5
scale_curve = SubResource( 7 )
color_ramp = SubResource( 11 )

[sub_resource type="SpatialMaterial" id=13]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 2, 1.5, 1, 0.38 )

[sub_resource type="ParticlesMaterial" id=14]
flag_align_y = true
direction = Vector3( 0.2, 0, 0.2 )
spread = 180.0
flatness = 0.79
gravity = Vector3( 0, 0, 0 )
initial_velocity = 5.0
angle = 720.0
angle_random = 1.0
scale = 0.5
scale_curve = SubResource( 7 )

[sub_resource type="CubeMesh" id=15]
material = SubResource( 13 )
size = Vector3( 0.001, 2, 0.2 )

[sub_resource type="SpatialMaterial" id=16]
albedo_color = Color( 0.329412, 0.360784, 0.427451, 1 )

[sub_resource type="Gradient" id=17]
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=18]
gradient = SubResource( 17 )

[sub_resource type="Curve" id=19]
_data = [ Vector2( 0, 0 ), 0.0, 2.93239, 0, 0, Vector2( 0.395073, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -3.92163, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=20]
curve = SubResource( 19 )

[sub_resource type="ParticlesMaterial" id=21]
direction = Vector3( 0, 0, 0 )
spread = 180.0
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 4.0
initial_velocity_random = 0.1
angular_velocity = 720.0
angular_velocity_random = 1.0
damping = 1.0
damping_curve = SubResource( 5 )
angle = 720.0
angle_random = 1.0
scale = 0.5
scale_curve = SubResource( 20 )
color_ramp = SubResource( 18 )

[sub_resource type="SpatialMaterial" id=22]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 0.909804, 0.956863, 1, 0.486275 )

[sub_resource type="Animation" id=23]
tracks/0/type = "value"
tracks/0/path = NodePath("ShockWave:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.15, 0 ), Vector3( 5, 0.15, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ShockWave:material_override:albedo_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.909804, 0.956863, 1, 0.486275 ), Color( 0.909804, 0.956863, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("OmniLight:light_energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 10.0, 50.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("OmniLight:light_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.756863, 0.109804, 0, 1 ), Color( 1, 0.568627, 0, 1 ), Color( 1, 0.792157, 0.145098, 1 ) ]
}

[node name="Explosion" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.311915, 0 )
script = ExtResource( 5 )

[node name="Fire" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0394468, 0, -0.0546322 )
layers = 524288
material_override = SubResource( 1 )
cast_shadow = 0
amount = 128
lifetime = 2.0
explosiveness = 1.0
visibility_aabb = AABB( -2.5, -0.5, -2.5, 5, 5, 5 )
process_material = SubResource( 8 )
draw_pass_1 = ExtResource( 4 )

[node name="SmokeCloud" type="Particles" parent="."]
layers = 524288
material_override = SubResource( 9 )
cast_shadow = 0
amount = 128
lifetime = 2.0
explosiveness = 1.0
visibility_aabb = AABB( -2.5, -0.5, -2.5, 5, 5, 5 )
process_material = SubResource( 12 )
draw_pass_1 = ExtResource( 2 )

[node name="Debree" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.102369, 0, -0.201156 )
material_override = SubResource( 13 )
cast_shadow = 0
amount = 128
lifetime = 0.5
explosiveness = 0.85
visibility_aabb = AABB( -2.5, -0.5, -2.5, 5, 5, 5 )
process_material = SubResource( 14 )
draw_pass_1 = SubResource( 15 )

[node name="SmokeRing" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0194869, 0, 0.0643125 )
layers = 524288
material_override = SubResource( 16 )
cast_shadow = 0
amount = 128
lifetime = 2.0
explosiveness = 1.0
visibility_aabb = AABB( -2.5, -0.5, -2.5, 5, 5, 5 )
process_material = SubResource( 21 )
draw_pass_1 = ExtResource( 1 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.322656, 0 )
light_color = Color( 0.756863, 0.109804, 0, 1 )
light_energy = 10.0
light_cull_mask = 4294443007
omni_range = 10.0

[node name="ShockWave" type="MeshInstance" parent="."]
transform = Transform( 0, 0, 0, 0, 0.15, 0, 0, 0, 0, 0.0725873, 0.238021, -0.218445 )
visible = false
material_override = SubResource( 22 )
mesh = ExtResource( 3 )
material/0 = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/explode = SubResource( 23 )

[node name="ExplosionAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 6 )
unit_size = 7.0
